# usb-explorer

./: .gitignore  CMakeLists.txt  config.h.in  read_usbids.py
src/: App.cpp  App.hpp  main.cpp
src/usb/: USBDevice.hpp  USBHotPlugController.cpp  USBHotPlugController.hpp  USBService.cpp  USBService.hpp
src/views/: DeviceDetailPanel.cpp  DeviceDetailPanel.hpp  DeviceListPanel.cpp  DeviceListPanel.hpp  MainFrame.cpp  MainFrame.hpp
